[workspace]
members = ["crates/diffy"]
resolver = "3"

[workspace.package]
description = "A burp extention for computing diffs between http responses"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nguyenthdat/diffy"
version = "0.1.0"
edition = "2024"
authors = ["Dat Nguyen <nguynethdat@outlook.com>"]
keywords = ["diff", "http", "response", "comparison", "burp"]